test/classes/nilability/if-var-2-int.good
if-var-2-int.chpl:6: error: "if var/const" construct is available only on classes, here it is invoked on int(64)
