test/classes/nilability/if-var-2-int.chpl
// Error: condition on an int

var nums = [2, 5, 0, 3];

for n in nums do
  if const nn = n then  // error
    writeln("non-nil");
  else
    writeln("nil");
